ci: add more linters
Signed-off-by: nscuro <nscuro@protonmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,12 @@
 linters:
   enable:
     - asciicheck
+    - exhaustive
+    - gochecknoinits
+    - goconst
     - gofmt
     - gosec
+    - predeclared
+    - unconvert
+    - unparam
     - wastedassign
