refactor: use generics for paging; return values instead of pointer where possible
BREAKING CHANGE! minimum required go version is now 1.18

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@f6164bd8c8acb4a71fb2791a8b6c4024ff038dab # tag=v3.0.0
         with:
-          go-version: 1.17
+          go-version: "1.18"
       - name: Generate SBOM
         uses: CycloneDX/gh-gomod-generate-sbom@d4aee0cf5133055dbd98899978246c10c18c440f # tag=v1.1.0
         with:
